--- a/public/assets/css/portal.css
+++ b/public/assets/css/portal.css
@@ -11,6 +11,7 @@ body {
   padding: 0;
   font: 400 1.8vh/1.5 "Poppins", sans-serif;
 }
+
 p {
   margin: 0;
   padding: 0;
@@ -22,12 +23,14 @@ img {
   width: 100%;
   height: auto;
 }
+
 :root {
   --bordercolor: #ebeff2;
   --secondcolor: #2ed47a;
   --spancolor: #109cf1;
   --fWeight500: 500;
 }
+
 .d-flex {
   display: flex;
   justify-content: space-between;
@@ -45,10 +48,12 @@ img {
     "sidebar search "
     "sidebar main";
 }
+
 .search {
   grid-area: search;
   border-bottom: 1px solid var(--bordercolor);
 }
+
 .sidebar {
   grid-area: sidebar;
   height: 100vh;
@@ -57,12 +62,14 @@ img {
 
 .main {
   grid-area: main;
-  margin: 3vh; /*  22px */
+  margin: 3vh;
+  /*  22px */
   display: flex;
   flex-flow: row nowrap;
   gap: 30px;
   max-height: 90vh;
 }
+
 /* inside main */
 .first {
   flex: 2 1 55%;
@@ -72,12 +79,14 @@ img {
   max-height: 90vh;
   box-shadow: 0px 6px 18px rgba(0, 0, 0, 0.06), 0px 6px 18px rgba(0, 0, 0, 0.06);
 }
+
 .second {
   flex: 1 1 35%;
   flex-flow: column nowrap;
   order: 2;
   gap: 15px;
 }
+
 .container {
   padding: 2% 2.8%;
 }
@@ -88,10 +97,12 @@ img {
   flex-direction: column;
   height: 100vh;
 }
+
 /* task header style*/
 .taskhead {
   padding: 0 3% 2%;
 }
+
 .taskhead-header {
   flex-flow: row nowrap;
   align-items: center;
@@ -99,6 +110,7 @@ img {
   position: relative;
   border-bottom: 4px solid var(--bordercolor);
 }
+
 .taskhead-header::before {
   border-bottom: 4px solid var(--secondcolor);
   position: absolute;
@@ -107,30 +119,37 @@ img {
   content: "";
   left: 0;
 }
+
 .taskCopmlete {
   font-weight: var(--fWeight500);
 }
+
 .viewSelect {
   font-size: 12px;
 }
+
 .viewSelect::after {
   content: "\f0d7";
   font-family: FontAwesome;
   margin-left: 4px;
   color: #aeaeae;
 }
+
 .viewChose {
   color: var(--spancolor);
 }
+
 /* calendar style */
-.calendar > h3 {
+.calendar>h3 {
   margin-bottom: 6%;
 }
+
 .dayblock {
   text-align: center;
   font-weight: var(--fWeight500);
   color: #334d6e;
 }
+
 .dayblock:first-child .dayN {
   background-color: var(--spancolor);
   border-radius: 50%;
@@ -140,13 +159,16 @@ img {
   -o-border-radius: 50%;
   color: #fff;
 }
+
 .dayblock:nth-child(2) {
   color: var(--spancolor);
 }
+
 .dayblock:hover {
   color: var(--spancolor);
   cursor: pointer;
 }
+
 /* task-block and cards style */
 .task-block {
   border-top: 1px solid var(--bordercolor);
@@ -156,6 +178,7 @@ img {
   flex-direction: column;
   justify-content: space-around;
 }
+
 .task-card {
   box-shadow: 0px 6px 18px rgba(0, 0, 0, 0.06), 0px 6px 18px rgba(0, 0, 0, 0.06);
   display: flex;
@@ -165,15 +188,18 @@ img {
   padding: 0 2vh;
   margin-bottom: 3%;
 }
+
 .icon {
   position: absolute;
   left: 80%;
   display: none;
 }
+
 .task-card:hover .icon {
   display: block;
   cursor: pointer;
 }
+
 .task-header,
 .task-footer {
   display: flex;
@@ -181,25 +207,31 @@ img {
   justify-content: space-between;
   align-items: center;
 }
+
 .task-footer {
   position: relative;
 }
-.task-header > h3 {
+
+.task-header>h3 {
   font-size: 2vh;
   font-weight: var(--fWeight500);
   margin: 0;
 }
+
 .task-type {
   font-size: 1.7vh;
   font-weight: var(--fWeight500);
   color: #90a0b7;
 }
+
 .task-date {
   margin-top: -2vh;
 }
-.task-date > span {
+
+.task-date>span {
   color: #4c5862;
 }
+
 .task-person-img {
   border-radius: 50%;
   -webkit-border-radius: 50%;
@@ -208,9 +240,11 @@ img {
   -o-border-radius: 50%;
   width: 24px;
 }
+
 .task-person-name {
   color: #707683;
 }
+
 .task-status {
   color: #fff;
   font-size: 11px;
@@ -224,13 +258,16 @@ img {
   -ms-border-radius: 4px;
   -o-border-radius: 4px;
 }
+
 .complete {
   background-color: var(--secondcolor);
 }
+
 .ended {
   background-color: #f7685b;
 }
-.task-footer > figure {
+
+.task-footer>figure {
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
@@ -238,14 +275,17 @@ img {
   padding: 0;
   gap: 12px;
 }
-.show-more > a {
+
+.show-more>a {
   font-weight: 600;
   color: var(--spancolor);
   text-decoration: none;
 }
+
 .show-more {
   text-align: center;
 }
+
 /* second block style */
 .deals {
   box-shadow: 0px 6px 18px rgba(0, 0, 0, 0.06), 0px 6px 18px rgba(0, 0, 0, 0.06);
@@ -253,10 +293,12 @@ img {
   display: flex;
   flex-direction: column;
 }
+
 .task {
   height: 50%;
   box-shadow: 0px 6px 18px rgba(0, 0, 0, 0.06), 0px 6px 18px rgba(0, 0, 0, 0.06);
 }
+
 .panelHeader {
   flex-flow: row nowrap;
   align-items: center;
@@ -264,32 +306,38 @@ img {
   padding: 0 3%;
   height: 52px;
 }
-.panelHeader > h3 {
+
+.panelHeader>h3 {
   margin: 0;
 }
+
 /* deals style */
 .deals-graph {
   padding: 3% 5% 0;
 }
+
 .graphtag {
   display: flex;
   justify-content: flex-start;
   align-items: center;
   font-size: 1.4vh;
 }
-.graphtag > svg {
+
+.graphtag>svg {
   margin-right: 8px;
 }
 
 .graph {
   margin: 10px 0;
 }
-.graph > img {
+
+.graph>img {
   margin: 0 auto;
   height: auto;
   width: 90%;
   object-fit: contain;
 }
+
 .task-graph {
   display: flex;
   /* height: 30vh; */
@@ -298,7 +346,8 @@ img {
   justify-content: space-around;
   padding: 10px;
 }
-.task-graph > img {
+
+.task-graph>img {
   height: auto;
   width: 50%;
   object-fit: contain;
@@ -314,10 +363,12 @@ img {
   position: relative;
   border-bottom: 1px solid var(--bordercolor);
 }
+
 label {
   display: block;
   width: 100%;
 }
+
 .search-input {
   border: none;
   flex-grow: 2;
@@ -325,13 +376,16 @@ label {
   height: 60px;
   padding-left: 32px;
 }
+
 .search-input::placeholder {
   color: #90a0b7;
   font: 400 12px/1.4 "Poppins", sans-serif;
 }
+
 .search-input:focus-visible {
   outline: none;
 }
+
 button[type="submit"] {
   border: none;
   background-color: transparent;
@@ -344,7 +398,8 @@ button[type="submit"] {
   padding: 0;
   color: #c2cfe0;
 }
-.search-form > svg {
+
+.search-form>svg {
   cursor: pointer;
 }
 
@@ -353,10 +408,12 @@ button[type="submit"] {
   padding: 0 1.6rem;
   border-bottom: 1px solid #ebeff2;
 }
-.header > h3 {
+
+.header>h3 {
   font: 600 18px/1.3 "Open Sans", sans-serif;
   color: var(--spancolor);
 }
+
 .sidebar_inner {
   display: flex;
   flex-direction: column;
@@ -364,12 +421,14 @@ button[type="submit"] {
   height: 90vh;
   padding: 0 1.3vw;
 }
+
 .person {
   margin: 24px 24px 40px 0;
   display: flex;
   flex-direction: row;
   align-items: center;
 }
+
 .profileImg {
   display: block;
   border-radius: 50%;
@@ -379,50 +438,63 @@ button[type="submit"] {
   -o-border-radius: 50%;
   width: 46px;
 }
+
 .description {
   margin-left: 16px;
   display: inline-block;
 }
+
 .description .descriptionName {
   font-size: 1.8vh;
   font-weight: var(--fWeight500);
 }
+
 .description .descriptionMail {
   font-size: 1.4vh;
   color: #90a0b7;
 }
+
 ul {
   padding: 0;
 }
+
 li {
   list-style: none;
 }
+
 .nav-item {
   margin-bottom: 20px;
 }
-.nav-item:not(:first-child) > a {
+
+.nav-item:not(:first-child)>a {
   text-decoration: none;
   color: #334d6e;
 }
-.nav-item:first-child > a {
+
+.nav-item:first-child>a {
   text-decoration: none;
   color: var(--spancolor);
 }
-.nav-item > a:hover {
+
+.nav-item>a:hover {
   color: var(--spancolor);
 }
+
 .menu-icon {
   display: flex;
   align-items: center;
 }
+
 .nav-label {
   margin-left: 14px;
   font-weight: var(--fWeight500);
 }
+
 .nav-item:last-child {
   padding-top: 24px;
   border-top: 1px solid var(--bordercolor);
 }
+
 .toggle {
   position: absolute;
   bottom: 0;
@@ -436,6 +508,7 @@ li {
     gap: 5px;
   }
 }
+
 @media only screen and (max-width: 500px) {
   .wrapper {
     display: grid;
@@ -447,38 +520,49 @@ li {
     grid-template-columns: 4fr;
     grid-template-rows: 60px 1fr;
   }
+
   .search {
     border: none;
   }
+
   .search-form {
     border: none;
   }
+
   .main {
     flex-flow: column;
     margin: 0;
     gap: 5px;
   }
+
   .sidebar {
     display: none;
   }
+
   .first {
     box-shadow: none;
   }
+
   .week {
     display: none;
   }
-  .calendar > h3 {
+
+  .calendar>h3 {
     margin-bottom: 3%;
   }
+
   .icon {
     left: 60%;
   }
+
   .show-more {
     display: none;
   }
+
   .deals {
     box-shadow: none;
   }
+
   .task {
     box-shadow: none;
   }
